Initial commit for backend API and frontend GUI prototype